--- a/project2/myproject/myapp/templates/homepage.html
+++ b/project2/myproject/myapp/templates/homepage.html
@@ -15,11 +15,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item {% if request.path == "/" %}active{% endif %}"> 
+            <li class="nav-item"> 
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="{% url 'add'%}">Add Recipe</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'logout'%}">Log Out</a>
