--- a/login_folder/login_pro/login_app/templates/login.html
+++ b/login_folder/login_pro/login_app/templates/login.html
@@ -7,10 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <form>
+    <form method='POST'>
+      {% if error%}
+      {{error}}
+      {% endif %}
      {% csrf_token %}
      {{form.as_p}}
      <a href={% url 'home'%}><button>Login</button></a>
+    
     </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
