--- a/login_folder/login_pro/login_app/templates/register.html
+++ b/login_folder/login_pro/login_app/templates/register.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <form>
+    <form method='POST'>
         {% csrf_token %}
         {{form.as_p}}
         <a href={% url 'login'%}><button>Register</button></a>
