--- a/grocery_system/grocery_management_project/static/my_app/css/styles.css
+++ b/grocery_system/grocery_management_project/static/my_app/css/styles.css
@@ -257,7 +257,8 @@ nav .logo.space{
     border-radius: 8px; /* Rounded corners */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow */
     overflow: hidden; /* Ensure image does not overflow card */
-    width: 300px; /* Fixed width for cards */
+    width: 200px; /* Fixed width for cards */
+    height: 350px;
     text-align: center; /* Center text */
 }
 
@@ -272,20 +273,42 @@ nav .logo.space{
 .product-card .product-info {
     padding: 16px;
     text-align: left;
+    
 }
 
 .product-card .product-name {
-    font-size: 1.2em;
+    /* font-size: 1.2em; */
+    font-size: 15px;
     margin-bottom: 8px;
+    color: black;
 }
 
 .product-card .product-description {
-    font-size: 1em;
+    /* font-size: 1em; */
+    font-size: 10px;
     color: #666;
 }
 
 .product-card .product-price {
-    font-size: 1.2em;
+    /* font-size: 1.2em; */
+    font-size: 10px;
     color: #333;
     margin-top: 8px;
 }
+ /* Optional: CSS to style the div and image */
+ .image-container {
+  width: 300px; /* Set a specific width for the container */
+  height: 200px; /* Set a specific height for the container */
+  overflow: hidden; /* Hide any overflowed content */
+  border: 1px solid #ddd; /* Add a border */
+  display: flex; /* Flexbox for centering the image */
+  align-items: center; /* Center the image vertically */
+  justify-content: center; /* Center the image horizontally */
+}
+.image-container img {
+  max-width: 100%; /* Make sure the image fits within the container */
+  height: auto; /* Maintain the image aspect ratio */
+}
+
+
+
