--- a/grocery_system/grocery_management_project/templates/add.html
+++ b/grocery_system/grocery_management_project/templates/add.html
@@ -1,17 +1,34 @@
 <!doctype html>
+{% load static %}
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'my_app/css/styles.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+   
+   
   </head>
-  <body>
-    <form method="POST" enctype="multipart/form-data" action="{% url 'addproduct' %}">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Save</button>
-    </form>
+  <body >
+    
+  <div class="container" style="background-image=url("/static/myapp/images/background.jpg");">
+    <div class="d-flex justify-content-center align-items-center row">
+      <div class="col-12">
+    
+      </div>
+        <div class="p-3 bg-light border col-8">
+          <form method="POST" enctype="multipart/form-data" action="{% url 'addproduct' %}" class="border">
+            <h3 style="text-align:center">Add Product</h3>
+              {% csrf_token %}
+              {{ form.as_p }}
+              <button type="submit">Save</button>
+          </form>
+
+        </div>
+    </div>
+</div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
