--- a/grocery_system/grocery_management_project/templates/login.html
+++ b/grocery_system/grocery_management_project/templates/login.html
@@ -1,4 +1,4 @@
-<!doctype html>
+{% comment %} <!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -38,45 +38,45 @@
 
       <p class="text-center">or:</p> {% endcomment %}
     
-     <form method='POST'>
+     {% comment %} <form method='POST'>
       {% csrf_token %}
       {{form.as_p}}
       <ul class="nav nav-pills nav-justified mb-3" id="ex1" role="tablist">
         <li class="nav-item" role="presentation">
           <a class="nav-link active" id="tab-login" data-mdb-pill-init href="{% url 'home'%}" role="tab"
             aria-controls="pills-login" aria-selected="true">Login</a>
-        </li>
+        </li> {% endcomment %}
         {% comment %} <li class="nav-item" role="presentation">
           <a class="nav-link" id="tab-register" data-mdb-pill-init href="#pills-register" role="tab"
             aria-controls="pills-register" aria-selected="false">Register</a>
         </li> {% endcomment %}
-      </ul>
+      {% comment %} </ul> {% endcomment %}
 
       <!-- 2 column grid layout -->
-      <div class="row mb-4">
+      {% comment %} <div class="row mb-4">
         <div class="col-md-6 d-flex justify-content-center">
           <!-- Checkbox -->
           <div class="form-check mb-3 mb-md-0">
             <input class="form-check-input" type="checkbox" value="" id="loginCheck" checked />
             <label class="form-check-label" for="loginCheck"> Remember me </label>
           </div>
-        </div>
+        </div> {% endcomment %}
 
-        <div class="col-md-6 d-flex justify-content-center">
+        {% comment %} <div class="col-md-6 d-flex justify-content-center">
           <!-- Simple link -->
           <a href="#!">Forgot password?</a>
         </div>
-      </div>
+      </div> {% endcomment %}
 
       <!-- Submit button -->
      
 
       <!-- Register buttons -->
-      <div class="text-center">
+      {% comment %} <div class="text-center">
         <p>Not a member? <a href="{% url 'register_view'%}">Register</a></p>
       </div>
-    
-  </div>
+     {% endcomment %}
+  {% comment %} </div>
   <div class="tab-pane fade" id="pills-register" role="tabpanel" aria-labelledby="tab-register">
     
       <div class="text-center mb-3">
@@ -116,5 +116,170 @@
 <!-- Pills content -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
+</html> {% endcomment %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <!-- Design by foolishdeveloper.com -->
+    <title>Login Page</title>
+ 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+    <!--Stylesheet-->
+    <style media="screen">
+      *,
+*:before,
+*:after{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body{
+    background-color: #080710;
+}
+.background{
+    width: 430px;
+    height: 520px;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    top: 50%;
+}
+.background .shape{
+    height: 200px;
+    width: 200px;
+    position: absolute;
+    border-radius: 50%;
+}
+.shape:first-child{
+    background: linear-gradient(
+        #1845ad,
+        #23a2f6
+    );
+    left: -80px;
+    top: -80px;
+}
+.shape:last-child{
+    background: linear-gradient(
+        to right,
+        #ff512f,
+        #f09819
+    );
+    right: -30px;
+    bottom: -80px;
+}
+form{
+    height: 520px;
+    width: 400px;
+    background-color: rgba(255,255,255,0.13);
+    position: absolute;
+    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    border: 2px solid rgba(255,255,255,0.1);
+    box-shadow: 0 0 40px rgba(8,7,16,0.6);
+    padding: 50px 35px;
+}
+form *{
+    font-family: 'Poppins',sans-serif;
+    color: #ffffff;
+    letter-spacing: 0.5px;
+    outline: none;
+    border: none;
+}
+form h3{
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 42px;
+    text-align: center;
+}
+
+label{
+    display: block;
+    margin-top: 30px;
+    font-size: 16px;
+    font-weight: 500;
+}
+input{
+    display: block;
+    height: 50px;
+    width: 100%;
+    background-color: rgba(255,255,255,0.07);
+    border-radius: 3px;
+    padding: 0 10px;
+    margin-top: 8px;
+    font-size: 14px;
+    font-weight: 300;
+}
+::placeholder{
+    color: #e5e5e5;
+}
+button{
+    margin-top: 50px;
+    width: 100%;
+    background-color: #ffffff;
+    color: #080710;
+    padding: 15px 0;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.social{
+  margin-top: 30px;
+  display: flex;
+}
+.social div{
+  background: red;
+  width: 150px;
+  border-radius: 3px;
+  padding: 5px 10px 10px 5px;
+  background-color: rgba(255,255,255,0.27);
+  color: #eaf0fb;
+  text-align: center;
+}
+.social div:hover{
+  background-color: rgba(255,255,255,0.47);
+}
+.social .fb{
+  margin-left: 25px;
+}
+.social i{
+  margin-right: 4px;
+}
+
+    </style>
+</head>
+<body>
+    <div class="background">
+        <div class="shape"></div>
+        <div class="shape"></div>
+    </div> 
+    <form method="post">
+        <h3>Login Here</h3>
+        {% csrf_token %} 
+        <label for="username">Username</label>
+        <input type="text" placeholder="Enter Username" id="username" name="username">
+
+        <label for="password">Password</label>
+        <input type="password" placeholder="Password" id="password" name="pass">
+        <button type="submit">Log In</button>
+        <!-- <input type="button" value=""> -->
+        <!-- <div class="social">
+          <div class="go"><i class="fab fa-google"></i>  Google</div>
+          <div class="fb"><i class="fab fa-facebook"></i>  Facebook</div>
+        </div> -->
+        <a href="{% url 'signup' %}" >Create a account</a>
+        {% comment %} <a href="{% url 'reset' %}">Forget Password</a> {% endcomment %}
+        
+    </form>
+</body>
 </html>
+
+
+
+
 
