--- a/grocery_system/grocery_management_project/templates/payment.html
+++ b/grocery_system/grocery_management_project/templates/payment.html
@@ -120,54 +120,18 @@
 
 
 
-      {% comment %} #product slider {% endcomment %}
-      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true" data-ride="carousel" data-interval="3000">
-            <center>
-            <div class="carousel-inner">
-                {% for image in images %}
-                <div class="carousel-item {% if forloop.first %}active{% endif %}">
-                    <img src="{{ image }}" alt="Carousel Image" style="height:500px;width:100%">
-                </div>
-                {% endfor %}
-            </div>
-        </center>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
+     <!-- payment.html -->
 
-        
-      
-     {% comment %} product show {% endcomment %}
-    
-        <div class="product-grid pt-5">
-        {% for product in products %}
-        <div class="product-card" style="height:350px;width:250px;">
-            <a href="{% url 'product_details' product.id %}">
-            <img src="{{ product.image.url }}" alt="{{ product.product_name }}">
-            <div class="product-info">
-               
+<body>
 
-                <p class="product-name">{{ product.product_name }}</p>
-              
-                
-                <p class="product-description">{{ product.description }}</p>
-                <p class="product-price">${{ product.price }}</p> 
-            </div>
-           <a href="{% url 'Add_cart' product.id %}"><button type="submit" class="btn btn-primary">Add to Cart</button></a>
-        </div>
-        {% endfor %}
-    </a>
-        <!-- Repeat for other products -->
-       
-    </div>
+    <h1>Proceed to Payment</h1>
+    <p>Product: {{ product.product_name }}</p>
+    <p>Amount: ₹{{ total_price }}</p>
 
+    <button id="checkout-button">Checkout</button>
   
+
+    
     <script src="{% static 'my_app/js/script.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js"></script>
