--- a/grocery_system/grocery_management_project/templates/add.html
+++ b/grocery_system/grocery_management_project/templates/add.html
@@ -40,7 +40,7 @@
              <li ><a href="{% url 'About'%}">About Us</a></li>
              <li><a href="#">Contact Us</a></li>
              <li><a href="{% url 'profile' %}">User Profile</a></li>
-             <li><a href="{% url 'cart_view' %}">Cart</a></li>
+             {% comment %} <li><a href="{% url 'cart_view' %}">Cart</a></li> {% endcomment %}
             <li> <a href="{% url 'logout_view'%}">Logout</a></li>
  
           </div>
