--- a/grocery_system/grocery_management_project/templates/home.html
+++ b/grocery_system/grocery_management_project/templates/home.html
@@ -90,6 +90,8 @@
             <li ><a href="{% url 'About'%}">About Us</a></li>
             <li><a href="#">Contact Us</a></li>
             <li><a href="{% url 'profile' %}">User Profile</a></li>
+            <li><a href="{% url 'cart_view' %}">View Cart</a></li>
+            <li><a href="{% url 'order_list' %}">My Order</a></li>
             {% comment %} <li><a href="{% url 'cart_view' %}">Cart</a></li> {% endcomment %}
            <li> <a href="{% url 'logout_view'%}">Logout</a></li>
 
