--- a/grocery_system/grocery_management_project/templates/order_list.html
+++ b/grocery_system/grocery_management_project/templates/order_list.html
@@ -115,40 +115,42 @@
         {% endif %}
         
         </nav>
-
-
-
-
-
-     
-      
-     {% comment %} product show {% endcomment %}
-     <div style="display:flex;justify-content:center;align-item:center">
-        <div style="height: 400px; width: 400px;">
-        
-        <center><img src="{{ order.product.image.url }}" alt="{{ order.product.product_name }}" style="height: 200px; width: 200px;border:none"></center>
-                <center><div>
-               <p class="product-name">{{order.product.product_name }}</p>
-               
-                
-                <p class="product-description">{{ order.product.description }}</p>
-                <p class="product-price">Price:{{ order.product.price }}rs</p> 
-                <p class="product-price">Shipping charge:{{ shipping_charge}}rs</p> 
-                <p class="product-price">Total_Price:{{ total_price }}rs</p>
-                </div>
-            </center>
-        <center>
-            <form action="{% url 'payment' order.id 'total_price' %}" method="POST">
-                {% csrf_token %}
-                <button type="submit" id="checkout-button btn-success"  id="alertButton">Checkout</button>
-              </form>
-            
-        </center>
-        </div> 
-    </div>
-
-
-       
+  
+        <h3 style="background-color:grey;text-align:center;color:blue">Your Orders</h3>
+        {% if orders %}
+        <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">id</th>
+                <th scope="col">Product_name</th>
+                <th scope="col">Status</th>
+                <th scope="col">Date of Order</th>
+                <th scope="col">Image</th>
+                <th scope="col">price</th>
+              </tr>
+            </thead>
+            <tbody>
+                {% for order in orders %}
+                <tr>
+                    <td>{{ order.id }}</td>
+                    <td>{{ order.product.product_name }}</td>
+                    <td style="color:red">{{ order.status }}</td> <!-- Assuming there's a 'status' field -->
+                    <td>{{ order.created_at|date:"d M Y, H:i" }}</td> <!-- Assuming there's a 'created_at' field -->
+                    <td>
+                        <img src="{{ order.product.image.url }}" alt="{{ order.product.product_name }}" style="max-width: 100px; max-height: 100px;">
+                    </td>
+                    <td>{{ order.product.price }}</td> 
+                </tr>
+            {% endfor %}
+            </tbody>
+          </table>
+        {% else %}
+            <p>No orders found.</p>
+        {% endif %}
+    
+    </body>
+    </html>
+    
   
     <script src="{% static 'my_app/js/script.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
@@ -157,19 +159,5 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script>
-        // Get the button element
-        const alertButton = document.getElementById('alertButton');
-       
-
-        // Add an event listener to the button
-        alertButton.addEventListener('click', function() {
-            // Show the alert popup
-            alert('Order Successfully');
-        });
-        
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-   
 </body>
 </html>
