--- a/grocery_system/grocery_management_project/templates/order_confirm.html
+++ b/grocery_system/grocery_management_project/templates/order_confirm.html
@@ -123,8 +123,8 @@
         
             <h4 style="text-align:center">{{ data.description }}</h4>
             <p style="text-align:center">Price: ${{ data.price }}</p>
-            <center><a href="{% url 'order' data.id %}" class="btn btn-success"  id="alertButton">Confirm order</a>
-                <a href="{% url 'home'%}" class="btn btn-danger" id="alertButton1">cancel</a>
+            <center><a href="{% url 'order' data.id %}" class="btn btn-success" >Confirm order</a>
+                
             </center>
 
             
@@ -147,21 +147,6 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script>
-        // Get the button element
-        const alertButton = document.getElementById('alertButton');
-        const alertButton1 = document.getElementById('alertButton1');
-
-        // Add an event listener to the button
-        alertButton.addEventListener('click', function() {
-            // Show the alert popup
-            alert('Order Successfully');
-        });
-        alertButton1.addEventListener('click', function() {
-            // Show the alert popup
-            alert('Are You Sure For Cancle Your Order');
-        });
-    </script>
+   
 </body>
 </html>
