--- a/grocery_system/grocery_management_project/templates/proceed_payment.html
+++ b/grocery_system/grocery_management_project/templates/proceed_payment.html
@@ -81,7 +81,7 @@
             <div class="dropdown">
             <a href="#" class="nav-item">Category <i class="fa fa-caret-down"></i></a>
             <div class="dropdown-content">
-               {% for i in categories %}
+               {% for i in cate %}
                <li><a href="{% url 'read' i.id %}">{{ i.name }}</a></li>
 
                 {% endfor %}
@@ -138,7 +138,7 @@
                 </div>
             </center>
         <center>
-            <form action="{% url 'payment' order.id 'total_price' %}" method="POST">
+            <form action="{% url 'payment' order.id  %}" method="POST">
                 {% csrf_token %}
                 <button type="submit" id="checkout-button btn-success"  id="alertButton">Checkout</button>
               </form>
